--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required (VERSION 3.2)
 
+# Use c++11
+set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
+
 # Set up project
 project (TimGameLib)
 
